Fixing scrolling bug in albumpreviews on mobile

--- a/src/components/Album/AlbumPreview/styles.scss
+++ b/src/components/Album/AlbumPreview/styles.scss
@@ -127,6 +127,7 @@ $height5: $width5 / $aspect-ratio;
 
   .titleAndAttribution {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
 
     .title {
